# WhiteCane_ewha

./: .gitignore  README.md
backend/rust_server/: .env.example  Cargo.toml
backend/rust_server/src/: main.rs
backend/rust_server/src/handlers/: location.rs  mod.rs  navigation.rs  place.rs
backend/rust_server/src/routes/: mod.rs
frontend/whitecane/: .env.example  .gitignore  README.md  firebase.json  pubspec.yaml
frontend/whitecane/android/app/: build.gradle.kts  google-services.json
frontend/whitecane/ios/Runner/: GoogleService-Info.plist  Info.plist
frontend/whitecane/ios/Runner.xcodeproj/: project.pbxproj
frontend/whitecane/lib/: firebase_options.dart  main.dart
frontend/whitecane/lib/data/firestore/: building_firestore_source.dart
frontend/whitecane/lib/di/: service_locator.dart
frontend/whitecane/lib/domain/model/: entrance.dart  place.dart
frontend/whitecane/lib/domain/repository/: place_repository.dart
frontend/whitecane/lib/domain/usecase/: search_places_usecase.dart
frontend/whitecane/lib/navigation/: main_navigation_page.dart
frontend/whitecane/lib/presentation/common/: custom_search_bar.dart  map_component.dart  (+2 more)
frontend/whitecane/linux/: CMakeLists.txt
frontend/whitecane/linux/runner/: my_application.cc
frontend/whitecane/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/whitecane/macos/Runner.xcodeproj/: project.pbxproj
frontend/whitecane/test/: widget_test.dart
frontend/whitecane/web/: index.html  manifest.json
frontend/whitecane/windows/: CMakeLists.txt
frontend/whitecane/windows/runner/: Runner.rc  main.cpp
(+17 files in other folders)
