[package]
name = "whitecane_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
